<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">vikingGTD</string>
    <string name="menu_settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="no_lists">You must create one or more lists in order to get started.\n
        For example \"Work\", \"Home improvement\", \"Hobbies\", \"Self improvement\" etc.\n
        Use the Add icon in the menu above to add a new list.</string>
    <string name="loading_lists">Loading the lists. Please wait...</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="anywhere">Anywhere</string>
    <string name="nowhere">Nowhere</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="saving">Saving</string>
    <string name="no_name">The name field is empty. Cannot save this item.</string>
    <string name="edit_list">Edit List</string>
    <string name="edit_action">Edit Action</string>
	<string name="delete">Delete</string>
	<string name="delete_list">Delete List</string>
	<string name="delete_action">Delete Action</string>
	<string name="delete_list_confirmation">Are you sure you want to delete this list?\n
	    This will also delete all it\'s activities and other properties!</string>
	<string name="delete_location_confirmation">Are you sure you want to delete this location?</string>
	<string name="delete_action_confirmation">Are you sure you want to delete this action?</string>
	<string name="save_list_failed">Could not save the list. Is it\'s name already in use?</string>
	<string name="save_location_failed">Could not save the location. Is it\'s name already in use?</string>
	<string name="no_actions">You must create one or more actions in order to get started with this list.</string>
	<string name="loading_actions">Loading actions. Please wait...</string>
	<string name="actions">Actions</string>
	<string name="action">Action</string>
	<string name="priority">Priority</string>
	<string-array name="priorities">
		<item >Critical</item>
		<item >Very important</item>
		<item >Higher</item>
		<item >High</item>
		<item >Normal</item>
		<item >Medium</item>
		<item >Low</item>
		<item >Insignificant</item>
	</string-array>
	<string name="where">Where</string>
	<string name="how">How</string>
	<string-array name="focuses_needed">
	    <item >Inspired moment</item>
		<item >Full attention</item>
		<item >Good attention</item>
		<item >Normal</item>
		<item >Relatively trivial</item>
		<item >Trivial</item>
	</string-array>
	<string name="focus_required">Focus requiered to complete the action</string>
	<string name="week">Week</string>
	<string name="not_set">Not set</string>
	<string-array name="when_shortcuts">
	    <item >Shortcut</item>
		<item >Today</item>
		<item >Tomorrow</item>
		<item >Next Monday</item>
		<item >This Week</item>
		<item >After One Week</item>
		<item >Next Week</item>
		<item >This Month</item>
		<item >Next Month</item>
		<item >Next Quarter</item>
		<item >Next Year</item>
		<item >Not set</item>
	</string-array>
	<string-array name="when_filter">
		<item >Today</item>
		<item >Tomorrow</item>
		<item >This Week</item>
		<item >Next Week</item>
		<item >This Month</item>
		<item >Next Month</item>
		<item >This Quarter</item>
		<item >Next Quarter</item>
		<item >This year</item>
		<item >Next Year or later</item>
	</string-array>
	<string-array name="misc_filter">
		<item >Overdue</item>
		<item >Unhide Completed</item>
		<item >Loosely Scheduled </item>
		<item >Uncheduled </item>
        <item >Using repeat</item>
	</string-array>
	<string-array name="when_years">
	    <item >Uset Year</item>
	    <item >2011</item>
	    <item >2012</item>
		<item >2013</item>
		<item >2014</item>
		<item >2015</item>
		<item >2016</item>
		<item >2017</item>
		<item >2018</item>
		<item >2019</item>
		<item >2020</item>
	</string-array>
	<string-array name="when_months">
	    <item >Unset Month</item>
		<item >January</item>
		<item >February</item>
		<item >March</item>
		<item >April</item>
		<item >May</item>
		<item >June</item>
		<item >July</item>
		<item >August</item>
		<item >September</item>
		<item >October</item>
		<item >November</item>
		<item >December</item>
	</string-array>				
	<string name="shortcuts">Shortcuts</string>
	<string name="when">When</string>
	<string name="year">Year</string>
	<string name="month">Month</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="date_calendar">Date (Calendar view)</string>
	<string name="prelim_time_explanation">You can set a prelimerary point in time like a year or month, a specific date or a specific time at a sppecific date. Preliminary values will typically be changed when you plan days or weeks at a later time.</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="uncomplete_action">Not Completed</string>
	<string name="import_confirmation">Importing data will erase all existing data. Do you want to proceed?</string>
	<string name="importing">Importing...</string>
	<string name="save_failed">Failed to save data</string>
	<string name="name_exist">The name already exist</string>
	<string name="lists">Lists</string>
	<string name="today">Today</string>
	<string name="pick">Pick</string>
	<string name="no_actions_today">There are no actions scheduled for today.</string>
	<string name="no_actions_pick">No actions match your filter criteria.</string>
	<string name="all_lists">Any list</string>
	<string name="any_priority">Any Priority</string>
	<string name="any_how">Anyhow</string>
	<string name="any_time">Any time</string>
	<string name="misc_any">All extra filters</string>
	<string name="misc_none">No extra filters</string>
	<string name="show_completed">Show completed actions</string>
	<string name="clear_filters">Clear Filters</string>
	<string name="add_location">Add Location</string>
	<string name="edit_location">Edit Location</string>
	<string name="delete_location">Delete Location</string>
	<string name="locations">Locations</string>
	<string name="move">Move</string>
	<string name="move_actions">Move Actions to List</string>
	<string name="backup_done">Backup is complete</string>
	<string name="backing_up">Backing up. Please wait...</string>
	<string name="restoring">Restoring data. Please wait...</string>
	<string name="restore_done">Restore complete.</string>
	<string name="restore">Restore</string>
	<string name="import_data">Import Data</string>
	<string name="restore_confirmation">This will delete all current data and restore the data set that was prevoiosly backed up.</string>
	<string name="no_file_to_restore">There is no backup file to restore from!</string>
	<string name="define_locations">Define Locations</string>
	<string name="import_task_list">Import from \'TaskList\' app</string>
	<string name="backup_top_sdcard">Backup to sdcard</string>
	<string name="restore_from_sdcard">Restore from sdcard</string>
    <string-array name="repeat_types">
		<item >Never</item>
		<item >When completed</item>
		<item >When scheduled</item>
	</string-array>
    <string-array name="repeat_when">
        <item >At date</item>
        <item >At day</item>
    </string-array>
	<string-array name="repeat_unit_types">
		<item >days</item>
		<item >weeks</item>
		<item >months</item>
		<item >years</item>
	</string-array>
    <string name="repeat">Repeat</string>
    <string name="unit">Unit</string>
    <string name="when_dot_dot">..When</string>
    <string name="repeat_dot_dot">..Repeat</string>
    <string-array name="day_names">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>First day of the week</item>
        <item>Last day of the week</item>
        <item>First day of the month</item>
        <item>Last day of the month</item>
        <item>First day of the year</item>
        <item>Last day of the year</item>
    </string-array>
</resources>